syntax = "proto3";

package rpcpb1;

option go_package = "grpc/rpcpb/rpcpb1";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// generate pb.go
// 项目根目录下执行即可
// protoc --go_out=. --go-grpc_out=. grpc/rpcpb/rpcpb2/helloworld.proto